<resources>
    <string name="app_name">Kursovaya</string>

    <string name="URL">https://api.spoonacular.com/</string>
    <string name="base_url_youtube">https://www.youtube.com/watch?v=%1$s</string>
    <string name="base_url_equipment">https://spoonacular.com/cdn/equipment_100x100/</string>
    <string name="base_url_ingredients">https://spoonacular.com/cdn/ingredients_100x100/</string>
    <string name="base_url_recipes">https://spoonacular.com/recipeImages/%1$d-240x150.%2$s</string>

    <string name="API_KEY">bf02524398c84d89b09c4f9f0ac55831</string>

    // SearchFoodVideos
    <string name="search_food_videos_title">SearchFoodVideos</string>
    <string name="search_food_videos_watch_video_on_youtube">Watch video on YouTube</string>

    // Generate Meal Plan
    <string name="generate_meal_plan_title">GenerateMealPlan</string>
    <string name="generate_meal_plan_ready_in_minutes">Ready in minutes:</string>
    <string name="generate_meal_plan_servings">Servings:</string>
    <string name="generate_meal_plan_show_recipe_website">Show recipe website</string>
    <string name="generate_meal_plan_show_equipment">Show equipment</string>
    <string name="generate_meal_plan_show_ingredients">Show ingredients</string>
    <string name="generate_meal_plan_show_nutrition_value">Show nutrition value</string>
    <string name="generate_meal_plan_show_similar_recipes">Show similar recipes</string>

    // Get Recipe Nutrition Widget by Id
    <string name="nutritions_bad_nutritions_title">Bad Nutritions</string>
    <string name="nutritions_good_nutritions_title">Good Nutritions</string>
    <string name="nutritions_nutrition_title_and_amount">%1$s: %2$s</string>
    <string name="nutritions_daily_needs">Percent of daily needs: %1$f</string>

    // Search Menu Items
    <string name="search_menu_items_title">Search Menu Items</string>
    
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
</resources>
