<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="45dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/menu_image"
        android:layout_width="325dp"
        android:layout_height="175dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <LinearLayout
        android:id="@+id/ready_in_minutes_layout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu_image">
        <TextView
            android:id="@+id/ready_in_minutes_title"
            android:gravity="center"
            android:text="@string/generate_meal_plan_ready_in_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/ready_in_minutes_value"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/servings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ready_in_minutes_layout">
        <TextView
            android:id="@+id/servings_title"
            android:gravity="center"
            android:text="@string/generate_meal_plan_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/servings_value"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/url"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/servings_layout"/>
    <Button
        android:id="@+id/showRecipeEquipmentButton"
        android:text="@string/generate_meal_plan_show_equipment"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/url"/>
    <Button
        android:id="@+id/showRecipeIngredientsButton"
        android:text="@string/generate_meal_plan_show_ingredients"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showRecipeEquipmentButton"/>
    <Button
        android:id="@+id/showRecipeNutritionValueButton"
        android:text="@string/generate_meal_plan_show_nutrition_value"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showRecipeIngredientsButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>